search item and service by location
