# storage/api-docs/api-docs.json
@@ -1589,6 +1589,47 @@
                 }
             }
         },
+        "/service/byLocation": {
+            "post": {
+                "tags": [
+                    "Service"
+                ],
+                "summary": "Get list of service",
+                "description": "Returns list of service",
+                "operationId": "searchService",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/AddressRequestCity"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Service"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Service"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/type": {
             "get": {
                 "tags": [
@@ -2047,6 +2088,47 @@
                 }
             }
         },
+        "/item/byLocation": {
+            "post": {
+                "tags": [
+                    "Item"
+                ],
+                "summary": "Get list of item",
+                "description": "Returns list of item",
+                "operationId": "searchItemsByLocation",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/AddressRequestCity"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Item"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Type"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/user": {
             "get": {
                 "tags": [
@@ -2428,6 +2510,18 @@
                         "description": "This is the exact location api link",
                         "type": "text", 
                         "example": "https://google.maps/dhjsdbshf"
+                    }
+                }
+            },
+            "AddressRequestCity": {
+                "title": "Address",
+                "description": "Address model",
+                "properties": {
+                    "city": {
+                        "title": "City",
+                        "description": "City name",
+                        "type": "string",
+                        "example": "Addis Ababa"
                     }
                 }
             },
